# alchemy-lab

./: .gitignore  README.md  pyproject.toml
core/diffusion/: coeffs.py  objectives.py  samplers.py  schedules.py
core/models/unet/: unet2d.py
core/nn/: attention.py  downsample.py  embeddings.py  residual.py  upsample.py
runtime/: Dockerfile  docker-compose.yaml  pyproject.toml
src/alchemy/core/diffusion/: coeffs.py  objectives.py  parameterisation.py  samplers.py  schedules.py
src/alchemy/core/models/unet/: unet2d.py
src/alchemy/core/models/vae/: pretrained.py
src/alchemy/core/nn/: attention.py  downsample.py  embeddings.py  precision.py  upsample.py
src/alchemy/lab/cli/: export.py  profiling.py  sample.py  train.py
src/alchemy/lab/configs/: profile.yaml  train.yaml
src/alchemy/lab/configs/checkpoints/: default.yaml
src/alchemy/lab/configs/data/: celeba_256.yaml
src/alchemy/lab/configs/logging/: default.yaml
src/alchemy/lab/configs/loss/: eps_linear.yaml
src/alchemy/lab/configs/model/: unet2d.yaml
src/alchemy/lab/configs/optim/: adamw.yaml
src/alchemy/lab/configs/vae/: sd_vae_ft_mse.yaml
src/alchemy/lab/data/: dataset.py  loader.py
src/alchemy/lab/loggers/: base.py  tensorboard.py  terminal.py
src/alchemy/lab/training/: checkpoints.py  distributed.py  ema.py  losses.py  optim.py  runner.py
src/alchemy/runtime/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  vcpkg.json
src/alchemy/runtime/.devcontainer/: devcontainer.json
src/alchemy/runtime/src/: README.md  batch_queue.cpp  batch_queue.h  ddpm_scheduler.cu  engine.cpp  engine.h  infer.cpp  infer.h  main.cpp  pipeline.cpp  pipeline.h  scheduler.h  utils.cu  utils.h
